BER WDPT Marie - Iteration 5 done

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -59,13 +59,13 @@
           </td>
         </tr>
       </tbody>
-      <!-- <tfoot>
+      <tfoot>
       <tr class="new">
         <td>
-          <input type="text"/>
+          <input type="text" class="input-text"/>
         </td>
         <td>
-          <input type="number" min="0"/>
+          <input type="number" class="input-price" min="0"/>
         </td>
         <td></td>
         <td></td>
@@ -73,7 +73,7 @@
           <button id="create" class="btn">Create</button>
         </td>
       </tr>
-    </tfoot> -->
+    </tfoot>
     </table>
 
     <p class="cta">
